--- a/webapp/src/app/scss/courses/_course_component.scss
+++ b/webapp/src/app/scss/courses/_course_component.scss
@@ -57,6 +57,7 @@
 
   .page-content-wrapper {
     width: auto;
+    height: 100%;
     z-index: 2;
     padding-left: $sidebar-collapsed-width + $main-content-side-padding;
     -webkit-transition: all 0.5s ease;
